# app/Http/Requests/Api/V1/EmployeeWorkflowUpdateRequest.php
@@ -69,7 +69,8 @@ class EmployeeWorkflowUpdateRequest extends FormRequest
             'obsession' => ['sometimes', 'nullable', 'array'],
             'obsession.t_shirt' => ['nullable', Rule::in(['L', 'M', 'S', 'XL', 'XS', '2XL', '3XL', '4XL', '5XL', '6XL'])],
             'obsession.birth_date' => ['required_with:obsession', 'date'],
-            'obsession.image_path' => ['nullable', 'string', 'max:255'],
+            'obsession.image' => ['nullable', 'file', 'image', 'max:10240'],
+            'obsession.image_path' => ['prohibited'],
             'obsession.religion' => ['nullable', Rule::in(['Christianity', 'Islam', 'Judaism', 'Buddhism', 'Hinduism', 'Other'])],
             'obsession.race' => ['nullable', Rule::in(['Caucasian', 'African American', 'Hispanic', 'Asian', 'Native American', 'Other'])],
             'obsession.notes' => ['nullable', 'string'],
